--- a/QuakeWorld/ezquake/configs/config.cfg
+++ b/QuakeWorld/ezquake/configs/config.cfg
@@ -103,7 +103,6 @@ hud_fps_item_opacity                  "1.0"
 hud_fps_place                         "screen"
 hud_fps_pos_x                         "45"
 hud_fps_pos_y                         "235"
-hud_fps_show                          "0"
 hud_fps_title                         "0"
 hud_frags_align_x                     "left"
 hud_frags_align_y                     "top"
@@ -117,6 +116,7 @@ hud_gameclock_blink                   "0"
 hud_gameclock_item_opacity            "1.0"
 hud_gameclock_place                   "screen"
 hud_gameclock_pos_y                   "-75"
+hud_gameclock_show                    "0"
 hud_group1_align_x                    "center"
 hud_group1_align_y                    "bottom"
 hud_group1_frame                      "0.5"
@@ -256,6 +256,7 @@ hud_netgraph_item_opacity             "0"
 hud_netgraph_pos_x                    "70"
 hud_netgraph_pos_y                    "-64.111649"
 hud_netgraph_scale                    "255.972229"
+hud_netgraph_show                     "1"
 hud_netproblem_item_opacity           "1.0"
 hud_netproblem_pos_x                  "-50"
 hud_netproblem_pos_y                  "-40"
@@ -273,6 +274,7 @@ hud_ping_place                        "@group3"
 hud_ping_pos_x                        "-5"
 hud_ping_pos_y                        "-55"
 hud_ping_scale                        "0.8"
+hud_ping_show                         "1"
 hud_ping_style                        "1"
 hud_quad_item_opacity                 "1.0"
 hud_quad_order                        "10"
@@ -303,6 +305,7 @@ hud_speed_item_opacity                "1.0"
 hud_speed_pos_x                       "179.798737"
 hud_speed_pos_y                       "-51.444317"
 hud_speed_scale                       "0.7"
+hud_speed_show                        "1"
 hud_speed_width                       "120"
 hud_suit_item_opacity                 "1.0"
 hud_suit_order                        "4"
@@ -337,7 +340,7 @@ hud_tracking_pos_x                    "17.600155"
 hud_tracking_pos_y                    "-75.222221"
 hud_vidlag_item_opacity               "1.0"
 hud_weaponstats_format                "%2                                       %8"
-hud_weaponstats_pos_x                 "400"
+hud_weaponstats_pos_x                 "-2"
 hud_weaponstats_pos_y                 "-75"
 hud_weaponstats_scale                 "0.7"
 hud_weaponstats_show                  "1"
@@ -351,6 +354,7 @@ topcolor                              "3"
 name                                  "$, ParadokS"
 mtu                                   "1400"
 rate                                  "30000"
+skin                                  "2"
 team                                  "mix"
 
 //Teamplay Communications
@@ -380,8 +384,8 @@ ignore_flood                          "1"
 
 //FPS and EyeCandy Settings
 cl_deadbodyFilter                     "1"
-cl_fakeshaft                          "2"
-cl_maxfps                             "1155"
+cl_fakeshaft                          "1"
+cl_maxfps                             "1440"
 cl_model_bobbing                      "0"
 cl_muzzleflash                        "0"
 cl_newlerp                            "0.1"
@@ -459,7 +463,7 @@ m_pitch                               "0.0422"
 m_yaw                                 "0.0354"
 
 //Input - Misc
-sensitivity                           "1"
+sensitivity                           "1.05"
 
 //Network Settings
 cl_c2sImpulseBackup                   "6"
@@ -470,6 +474,7 @@ cl_timeout                            "600"
 
 //Server Browser
 sb_autoupdate                         "0"
+sb_hideempty                          "0"
 sb_hidehighping                       "1"
 sb_inforetries                        "2"
 sb_infospersec                        "1000"
@@ -576,7 +581,6 @@ cl_democlock                          "1"
 cl_gameclock                          "3"
 cl_gameclock_x                        "18"
 cl_net_clientport                     "27003"
-cl_username                           "paradoks"
 fraglimit                             "50"
 hostname                              "Frogbot Clan Arena"
 maxclients                            "8"
@@ -802,7 +806,7 @@ bind  e             "__coming"
 bind  f             "__safe"
 bind  g             ""
 bind  h             "botcmd fill"
-bind  i             "info_show"
+bind  i             "info_hide"
 bind  k             ""
 bind  l             "lastscores"
 bind  m             ""
@@ -863,7 +867,7 @@ bind  KP_PGDN       ""
 bind  KP_INS        ""
 bind  KP_DEL        ""
 bind  KP_ENTER      ""
-bind  MOUSE1        "+dubboom"
+bind  MOUSE1        "+rock"
 bind  MOUSE2        "+jump"
 bind  MOUSE3        ""
 bind  MOUSE4        "__kill_me_bind"
